--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,19 @@
 language: r
 cache: packages
 
+env:
+  - global:
+    - WARNINGS_ARE_ERRORS=1
+
 script: ./travis-tool.sh run_tests
 
 before_install:
     - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
+    - chmod 755 ./travis-tool.sh
+    - ./travis-tool.sh bootstrap
 
 install:
     - ./travis-tool.sh install_deps
+
+after_failure:
+  - ./travis-tool.sh dump_logs
