--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,12 +6,12 @@ Date: 2016-12-22
 Author: Mauro Sugawara
 Maintainer: Mauro Sugawara <maurotcs@gmail.com>
 Description: Testing the capacity for protracted speciation models to explain slowdowns in diversification rates in real phylogenies using the methods implemented in the PBD R-package.
+License: GPL-2 | GPL-3
 Imports:
-    ape
-    PBD
+    geiger
+    PBD,
     deSolve
 Suggests:
     Treesim,
-    geiger,
     parallel,
     testthat
