--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: r
 cache: packages
 
+notifications:
+  slack: bigbiodiversity:2ahk1Y54AixO4hIsX5QXTPnK
+
 env:
   - global:
     - WARNINGS_ARE_ERRORS=1
